--- a/_posts/2019-07-08-TikTok.md
+++ b/_posts/2019-07-08-TikTok.md
@@ -8,4 +8,6 @@ categories: random
 
 Here is a quick post. Now that it is summer and I have more free time than I should, Im going to be experimenting with posting videos of my projects on TikTok. These are things that are too short to post on youtube, and too random to post on twitter.
 
+If Byte actually got released when it was supposed to, I would be using it instead.
+
 Feel free to check out my account, [@evanpratten](https://www.tiktok.com/@evanpratten)
