brython shift2 demo

--- a/_posts/2019-08-24-Shift2.md
+++ b/_posts/2019-08-24-Shift2.md
@@ -52,7 +52,26 @@ pip3 install shift-tool
 shift2 -h
 ```
 
+<div id="demo" markdown="1">
+### Web demo
+I have ported the core code from shift2 over to [brython](http://www.brython.info/index.html) to create this demo:
+
+<input type="radio" id="encode" name="shift-action" value="encode" checked>
+<label for="encode">Encode</label>
+<input type="radio" id="decode" name="shift-action" value="decode">
+<label for="decode">Decode</label>
+
+<input type="text" id="key" name="key" placeholder="Encoding key" required><br>
+<input type="text" id="msg" name="msg" placeholder="Message" required size="30">
+
+<button type="button" class="btn btn-primary" id="shift-button" >shift2 demo is loading...</button>
+
+</div>
+
 ### Future plans 
 Due to the fact that shift2 can also be used as a library (as outlined in the [README](https://github.com/Ewpratten/shift/blob/master/README.md)), I would like to write a program that allows users to talk to eachother IRC style over a TCP port. This program would use either a pre-shared, or generated key to encode / decode messages on the fly.
 
 If you are interested in helping out, or taking on this idea for yourself, send me an email.
+
+<!-- Python code -->
+<script type="text/python" src="/assets/python/shift2demo.py"></script>
