improved shift2 demo button

--- a/_posts/2019-08-24-Shift2.md
+++ b/_posts/2019-08-24-Shift2.md
@@ -64,7 +64,7 @@ I have ported the core code from shift2 over to [brython](http://www.brython.inf
 <input type="text" id="key" name="key" placeholder="Encoding key" required><br>
 <input type="text" id="msg" name="msg" placeholder="Message" required size="30">
 
-<button type="button" class="btn btn-primary" id="shift-button" >shift2 demo is loading...</button>
+<button type="button" class="btn btn-primary" id="shift-button" disabled>shift2 demo is loading... (this may take a few seconds)</button>
 
 </div>
 
@@ -74,4 +74,4 @@ Due to the fact that shift2 can also be used as a library (as outlined in the [R
 If you are interested in helping out, or taking on this idea for yourself, send me an email.
 
 <!-- Python code -->
-<script type="text/python" src="/assets/python/shift2demo.py"></script>
+<script type="text/python" src="/assets/python/shift2/shift2demo.py"></script>
