--- a/_posts/2019-08-24-Shift2.md
+++ b/_posts/2019-08-24-Shift2.md
@@ -42,7 +42,7 @@ B2-is8Y&4!ED2H~Ix<~LOCfn@P;xLjM_E8(awt`1YC<SaOLbpaL^T!^W_ucF8Er~?NnC$>e0@WAWn2bq
 
 This is for a few reasons. Firstly, as mentioned above, shift2 uses base85 **twice**. Once before, and once after XOR encryption. Secondly, a file header is prepended to the output to help the decoder read the file. This header contains version info, the file length, and the encoding type.
 
-### Try it yourself
+### Try it yourself with PIP
 I have published shift2 on [pypi.org](https://pypi.org/project/shift-tool/) for use with PIP. To install shift2, ensure both `python3` and `python3-pip` are installed on your computer, then run:
 ```sh
 # Install shift2
@@ -53,8 +53,8 @@ shift2 -h
 ```
 
 <div id="demo" markdown="1">
-### Web demo
-I have ported the core code from shift2 over to [brython](http://www.brython.info/index.html) to create this demo:
+### Try it in the browser
+I have ported the core code from shift2 to [run in the browser](http://www.brython.info/index.html). This demo is entirely client-side, and may take a few seconds to load depending on your device.
 
 <input type="radio" id="encode" name="shift-action" value="encode" checked>
 <label for="encode">Encode</label>
