--- a/_drafts/2019-09-28-Offseason1.md
+++ b/_drafts/2019-09-28-Offseason1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "5024's first offseason event of 2019"
-description: "A 120lb headless chicken thad doesn't understand the word \"stop\""
+description: "A 120lb headless chicken that doesn't understand the word \"stop\""
 date:   2019-09-28 24:00:00
 categories: frc recap
 redirect_from: 
