Add small note to day1 about silas's stuff

--- a/_drafts/2020-04-20-LudumDare46.md
+++ b/_drafts/2020-04-20-LudumDare46.md
@@ -37,6 +37,16 @@ After task allocation, I took on the job of handling sounds and sound loading fo
 
 ----
 
+Day 1 started with @exvacuum developing a heartrate monitor system for the game:
+
+![Heartrate monitor](/assets/images/ludumdare46-heartrate.png)
+
+*Demo image showing off his algorithm*
+
+
+
+
+
 ## Day 2 
 
 ----
