--- a/_drafts/2020-04-20-LudumDare46.md
+++ b/_drafts/2020-04-20-LudumDare46.md
@@ -43,7 +43,11 @@ Day 1 started with @exvacuum developing a heartrate monitor system for the game:
 
 *Demo image showing off his algorithm*
 
+I also started out by writing a sound system that uses audio channels to separate sounds. This system pre-caches all sounds while the game loads. Unfortunately, after getting my branch merged into master, I noticed a few bugs:
+ - When queueing audio, the 2 most recent requests are always ignored
+ - Some browsers do not allow me to play multiple audio streams at the same time
 
+Due to these issues, I decided to rewrite the audio backend to use [Howler.js](https://howlerjs.com/). I streamed this rewrite [on Twitch]().
 
 
 
