I forgot what I changes

--- a/_drafts/2020-04-20-LudumDare46.md
+++ b/_drafts/2020-04-20-LudumDare46.md
@@ -39,7 +39,7 @@ After task allocation, I took on the job of handling sounds and sound loading fo
 
 Day 1 started with @exvacuum developing a heartrate monitor system for the game:
 
-![Heartrate monitor](/assets/images/ludumdare46-heartrate.png)
+![Heartrate monitor](/assets/images/ld46-heartrate.png)
 
 *Demo image showing off his algorithm*
 
@@ -49,9 +49,9 @@ I also started out by writing a sound system that uses audio channels to separat
  - When queueing audio, the 2 most recent requests are always ignored
  - Some browsers do not allow me to play multiple audio streams at the same time
 
-Due to these issues, I decided to rewrite the audio backend to use [Howler.js](https://howlerjs.com/). I streamed this rewrite [on Twitch](). The Howler rewrite was very painless, and made a much nicer interface for playing audio assets.
+Due to these issues, I decided to rewrite the audio backend to use [Howler.js](https://howlerjs.com/). I streamed this rewrite [on Twitch](https://www.twitch.tv/videos/595864066). The Howler rewrite was very painless, and made a much nicer interface for playing audio assets.
 
-```js
+```javascript
 // The old way
 globalSoundContext.playSound(globalSoundContext.channels.bgm, soundAssets.debug_ding);
 
@@ -61,7 +61,15 @@ soundAssets.debug_ding.play();
 
 This rewrite also added integration with the volume control sliders in the game settings menu (don't mind the spelling mistake):
 
-![Settings menu](/assets/images/settings-screen-ld64.png)
+![Settings menu](/assets/images/ld46-settings-screen.png)
+
+*Audio Settings screen*
+
+Later on in the day, a basic HUD was designed to incorporate the game elements. A bug was also discovered that causes Firefox-based clients to not render the background fill. We decided to replace the background fill with an image later.
+
+![V1 HUD](/assets/images/ld46-hud-v1.png)
+
+*V1 of the game HUD*
 
 
 
