More updates from day 1

--- a/_drafts/2020-04-20-LudumDare46.md
+++ b/_drafts/2020-04-20-LudumDare46.md
@@ -71,8 +71,21 @@ Later on in the day, a basic HUD was designed to incorporate the game elements. 
 
 *V1 of the game HUD*
 
+While developing the sound backend, and tweaking UI, I added sound assets for heartbeats, and footsteps. World assets were also added, and the walking system was improved.
+
+![World Mockup](/assets/images/ld46-world-assets-v1.png)
+
+*The game with basic world assets loaded*
+
 
 
 ## Day 2 
 
 ----
+
+## Day 3
+
+----
+
+
+## The Game
