Add day3 morning updates

--- a/_drafts/2020-04-20-LudumDare46.md
+++ b/_drafts/2020-04-20-LudumDare46.md
@@ -9,7 +9,7 @@ redirect_from:
  - /ebsdjtd9/
 ---
 
-Over the past weekend I teamed up with @rsninja722, @wm-c, @exvacuum, (insert rest of names here), and our friend Sally to participate in the [LudumDare46](https://ldjam.com/events/ludum-dare/46) game jam. This post will outline the game development process.
+Over the past weekend I teamed up with @rsninja722, @wm-c, @exvacuum, and our friend Sally to participate in the [LudumDare46](https://ldjam.com/events/ludum-dare/46) game jam. This post will outline the game development process.
 
 ## Day 0
 
@@ -77,11 +77,22 @@ While developing the sound backend, and tweaking UI, I added sound assets for he
 
 *The game with basic world assets loaded*
 
-
-
 ## Day 2 
 
 ----
+
+
+Day 2 started with a new background asset, and a new HUD design:
+
+![Background](/assets/images/ld46-new-game-bg.png)
+
+*The game's new background*
+
+![HUD](/assets/images/ld46-hud-v2.png)
+
+*The game's new HUD* 
+
+@rsninja722 also got to work on updating the game's collisions based on the new assets.
 
 ## Day 3
 
