Update index links

--- a/_drafts/2020-04-20-LudumDare46.md
+++ b/_drafts/2020-04-20-LudumDare46.md
@@ -92,7 +92,7 @@ Day 2 started with a new background asset, and a new HUD design:
 
 *The game's new HUD* 
 
-@rsninja722 also got to work on updating the game's collisions based on the new assets.
+@rsninja722 also got to work on updating the game's collisions based on the new assets, while I added more sounds to the game (again, streaming this process [on Twitch](https://www.twitch.tv/videos/596589171)).
 
 ## Day 3
 
