yeet a new post onto the feed

--- a/_posts/2020-04-20-LudumDare46.md
+++ b/_posts/2020-04-20-LudumDare46.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "LudumDare46 Recap"
-description: "Recapping the development of [INSERT GAME NAME HERE]"
+description: "Recapping the development of <em>Micromanaged Mike</em>"
 date:   2020-04-17 12:00:00 # Change this to: 2020-04-20 12:00:00
 categories: gamedev gamejam team
 redirect_from: 
@@ -9,7 +9,7 @@ redirect_from:
  - /ebsdjtd9/
 ---
 
-Over the past weekend I teamed up with @rsninja722, @wm-c, @exvacuum, and our friend Sally to participate in the [LudumDare46](https://ldjam.com/events/ludum-dare/46) game jam. This post will outline the game development process.
+Over the past weekend I teamed up with @rsninja722, @wm-c, @exvacuum, @marshmarlow, and our friends Sally and Matt to participate in the [LudumDare46](https://ldjam.com/events/ludum-dare/46) game jam. This post will outline the game development process.
 
 ## Day 0
 
@@ -59,7 +59,7 @@ globalSoundContext.playSound(globalSoundContext.channels.bgm, soundAssets.debug_
 soundAssets.debug_ding.play();
 ```
 
-This rewrite also added integration with the volume control sliders in the game settings menu (don't mind the spelling mistake):
+This rewrite also added integration with the volume control sliders in the game settings menu:
 
 ![Settings menu](/assets/images/ld46-settings-screen.png)
 
@@ -77,7 +77,11 @@ While developing the sound backend, and tweaking UI, I added sound assets for he
 
 *The game with basic world assets loaded*
 
-## Day 2 
+@wm-c and @rsninja722 also spent time developing the game's tutorial mode.
+
+*The game's progress at the end of Day 1 can be found at commit [84d8438](https://github.com/rsninja722/LudumDare46/tree/84d843880f052fd274d2d14036220e6b591e9ec3)*
+
+## Day 2 & 3
 
 ----
 
@@ -94,9 +98,18 @@ Day 2 started with a new background asset, and a new HUD design:
 
 @rsninja722 also got to work on updating the game's collisions based on the new assets, while I added more sounds to the game (again, streaming this process [on Twitch](https://www.twitch.tv/videos/596589171)).
 
-## Day 3
+From then on, development time was just spent tweaking things such as:
+ - A Chrome sound bug
+ - A transition bug when moving from the loading screen to tutorial
+ - Some collision bugs
+ - Adding a new credits screen
 
-----
-
+*The game's progress at the end of Day 2 can be found at commit [b9d758f](https://github.com/rsninja722/LudumDare46/tree/b9d758f4172f2ca251da6f60af713888ef28b5fe)*
 
 ## The Game
+
+Micromanaged Mike is free to play on [@rsninj722's website](https://rsninja.dev/LudumDare46/).
+
+![Game screenshot](/assets/images/ld46-final.png)
+
+*Final game screenshot*
