--- a/_posts/2020-06-05-32u4-upload.md
+++ b/_posts/2020-06-05-32u4-upload.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Flashing code to a 32u4 chip"
 description: "Notes for my future self"
 date:   2020-06-05 13:23:00 
-categories: avr 32u4
+categories: avr 32u4 lowlevel
 redirect_from: 
  - /post/65f9kjl4/
  - /65f9kjl4/
