Fix up syntax stuff

--- a/_posts/2019-06-27-Python.md
+++ b/_posts/2019-06-27-Python.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title:  "Hunting snakes with a shotgun"
 description: "Python is a little too forgiving"
 date:   2019-06-27 7:00:00
