--- a/_posts/2020-04-20-LudumDare46.md
+++ b/_posts/2020-04-20-LudumDare46.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title:  "LudumDare46 Recap"
 description: "Recapping the development of <em>Micromanaged Mike</em>"
 date:   2020-04-20 12:00:00
