--- a/_posts/2019-08-24-Shift2.md
+++ b/_posts/2019-08-24-Shift2.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title:  "Keyed data encoding with Python"
 description: "XOR is pretty cool"
 date:   2019-08-24 13:13:00
