--- a/_posts/2019-12-11-Cron.md
+++ b/_posts/2019-12-11-Cron.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title:  "I used cron for the first time"
 description: "And I didn't die"
 date:   2019-12-11 11:38:00
