--- a/_posts/2020-06-05-32u4-upload.md
+++ b/_posts/2020-06-05-32u4-upload.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title:  "Flashing code to a 32u4 chip"
 description: "Notes for my future self"
 date:   2020-06-05 13:23:00 
