--- a/_posts/2019-06-27-PWNlink.md
+++ b/_posts/2019-06-27-PWNlink.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title:  "I had some fun with a router"
 description: "cleartext passwords + external management = death wish"
 date:   2019-06-27 17:16:00
