--- a/_posts/2020-04-20-LudumDare46.md
+++ b/_posts/2020-04-20-LudumDare46.md
@@ -4,10 +4,11 @@ title:  "LudumDare46 Recap"
 description: "Recapping the development of <em>Micromanaged Mike</em>"
 date:   2020-04-20 12:00:00
 categories: gamedev gamejam team
-requires_twitter: true
 redirect_from: 
  - /post/ebsdjtd9/
  - /ebsdjtd9/
+uses:
+ - twitter
 ---
 
 Over the past weekend I teamed up with @rsninja722, @wm-c, @exvacuum, @marshmarlow, and our friends Sally and Matt to participate in the [LudumDare46](https://ldjam.com/events/ludum-dare/46) game jam. This post will outline the game development process.
