Add sub-rss feeds

--- a/_posts/2019-06-27-PWNlink.md
+++ b/_posts/2019-06-27-PWNlink.md
@@ -3,8 +3,7 @@ layout: page
 title:  "I had some fun with a router"
 description: "cleartext passwords + external management = death wish"
 date:   2019-06-27 17:16:00
-categories: projects
-tag: projects
+tags: projects
 ---
 
 I was playing around with some D-link routers today and remembered an [ExploitDB Entry](https://www.exploit-db.com/exploits/33520) I read a while ago. Many D-link routers have a great feature that allows remote management and configuration queries. Interestingly, this cannot be disabled, and one of the pages contains a cleartext version of the admin password (yay!).
