--- a/_posts/2019-12-11-Cron.md
+++ b/_posts/2019-12-11-Cron.md
@@ -3,7 +3,7 @@ layout: page
 title:  "I used cron for the first time"
 description: "And I didn't die"
 date:   2019-12-11 11:38:00
-categories: random
+tags: random
 redirect_from: 
  - /post/cd9dj84kf0/
  - /cd9dj84kf0/
