--- a/_posts/2019-06-27-Python.md
+++ b/_posts/2019-06-27-Python.md
@@ -3,7 +3,7 @@ layout: page
 title:  "Hunting snakes with a shotgun"
 description: "Python is a little too forgiving"
 date:   2019-06-27 7:00:00
-categories: random
+tags: random
 ---
 
 A rather large number of people know me as "the guy who does weird things with python". I would object to this title, but it is quite accurate. So, here are some of the things I like playing with in python. None of these are actually breaking the language, just little known facts and syntax. At some point I will share about actually breaking the language. For now, enjoy the weird things I have found over the past 6 years.
