--- a/_posts/2019-07-01-devDNS.md
+++ b/_posts/2019-07-01-devDNS.md
@@ -3,7 +3,7 @@ layout: page
 title:  "devDNS"
 description: "The DNS over devRant service"
 date:   2019-07-01 22:13:00
-categories: projects
+tags: projects
 ---
 
 Over the past year and a half, I have been hacking my way around the undocumented [devRant](https://devrant.com) auth/write API. At the request of devRant's creators, this API must not be documented due to the way logins work on the platform. That is besides the point. I have been working on a little project called [devDNS](https://devrant.com/collabs/2163502) over the past few days that uses this undocumented API. Why must I be so bad at writing intros?
