--- a/_posts/2019-07-15-MindMap.md
+++ b/_posts/2019-07-15-MindMap.md
@@ -3,7 +3,7 @@ layout: page
 title:  "Mind map generation with Python"
 description: "Step 1"
 date:   2019-07-15 18:38:00
-categories: projects frc
+tags: projects frc
 ---
 
 While working on an assignment with [Coggle](https://coggle.it) today, I noticed an interesting option in the save menu. *Download as .mm file*. Having rarely worked with mind maps before, and only doing it online, it never occured to me that someone would have a file format for it. So I took a look.
