--- a/_posts/2020-04-20-LudumDare46.md
+++ b/_posts/2020-04-20-LudumDare46.md
@@ -3,7 +3,7 @@ layout: page
 title:  "LudumDare46 Recap"
 description: "Recapping the development of <em>Micromanaged Mike</em>"
 date:   2020-04-20 12:00:00
-categories: gamedev gamejam team
+tags: gamedev gamejam team
 redirect_from: 
  - /post/ebsdjtd9/
  - /ebsdjtd9/
