--- a/_posts/2020-04-20-LudumDare46.md
+++ b/_posts/2020-04-20-LudumDare46.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title:  "LudumDare46 Recap"
+title:  "Ludum Dare 46: Jamming with friends"
 description: "Recapping the development of <em>Micromanaged Mike</em>"
 date:   2020-04-20 12:00:00
-tags: gamedev gamejam team
+tags: gamedev gamejam team ldjam javascript
 redirect_from: 
  - /post/ebsdjtd9/
  - /ebsdjtd9/
