--- a/_drafts/2021-05-01-Ludum-Dare-48.md
+++ b/_drafts/2021-05-01-Ludum-Dare-48.md
@@ -17,8 +17,9 @@ redirect_from:
  - 2 Weeks before
    - Language and toolchain choices
    - Tech Demo
-   - Fixing raylib bugs
+   - Fixing raylib bugs (+ cargo features)
    - cargo-web bug
    - packaging
  - 1 Day before
    - Building a template app
+   - Serial Studio
