more work on ld post

--- a/_drafts/2021-05-01-Ludum-Dare-48.md
+++ b/_drafts/2021-05-01-Ludum-Dare-48.md
@@ -12,7 +12,25 @@ redirect_from:
  - /eb0dJtd9/
 ---
 
-## Notes for later
+Its that time of year again. If you have read (a fair number of) my previous posts, you may know that there is a [biannual](https://www.google.com/search?q=biannual) game jam called [Ludum Dare](), which I have [participated in before](). Well, this year I rounded up a handful of by developer friends (@rsninja722, @wm-c, and @catarinaburghi), and we gave it a shot again.
+
+Unlike last year's game, which was written in JavaScript with @rsninja722's [game.js]() library, we wrote this game in [Rust]() using @raysan5's [raylib](). This was a whole bunch of new experiences bundled together for the team. For me, this was my first time working with GPU-based graphics, and for the others, this was their first time working with Rust.
+
+## Pre-jam
+
+## Day 0
+
+## Day 1
+
+## Day 2
+
+## Day 3
+
+## Final thoughts
+
+## Try the game!
+
+<!-- ## Notes for later
 
  - 2 Weeks before
    - Language and toolchain choices
@@ -22,4 +40,4 @@ redirect_from:
    - packaging
  - 1 Day before
    - Building a template app
-   - Serial Studio
+   - Serial Studio -->
