Aliases from old site

--- a/content/blog/2019-08-24-Shift2.md
+++ b/content/blog/2019-08-24-Shift2.md
@@ -4,6 +4,7 @@ title:  "Keyed data encoding with Python"
 description: "XOR is pretty cool"
 date:   2019-08-24
 tags: projects
+aliases: [/blog/2019/08/24/shift2]
 ---
 
 I have always been interested in text and data encoding, so last year, I made my first encoding tool. [Shift64](https://github.com/Ewpratten/shift64) was designed to take plaintext data with a key, and convert it into a block of base64 that could, in theory, only be decoded with the original key. I had a lot of fun with this tool, and a very stripped down version of it actually ended up as a bonus question on the [5024 Programming Test](https://github.com/frc5024/Programming-Test/blob/master/test.md) for 2018/2019. Yes, the key was in fact `5024`.
