--- a/content/blog/2020-04-20-LudumDare46.md
+++ b/content/blog/2020-04-20-LudumDare46.md
@@ -7,9 +7,9 @@ tags: gamedev gamejam team ldjam javascript
 redirect_from: 
  - /post/ebsdjtd9/
  - /ebsdjtd9/
-uses:
- - twitter
 aliases: [/blog/2020/04/20/ludumdare46]
+extra:
+    uses_twitter: true
 ---
 
 Over the past weekend I teamed up with @rsninja722, @wm-c, @exvacuum, @marshmarlow, and our friends Sally and Matt to participate in the [LudumDare46](https://ldjam.com/events/ludum-dare/46) game jam. This post will outline the game development process.
