--- a/content/blog/2022-04-06-udm-fan.md
+++ b/content/blog/2022-04-06-udm-fan.md
@@ -6,7 +6,7 @@ date: 2022-04-06
 tags: random
 draft: false
 extra:
-  uses_katex: true
+  uses_katex: false
   excerpt: A project review post covering my work on remote-control for the UDM-Pro cooling system
 ---
 
