--- a/content/blog/2022-06-08-bell-ipv6.md
+++ b/content/blog/2022-06-08-bell-ipv6.md
@@ -44,6 +44,10 @@ Both tunneling protocols use IP [Encapsulation](https://en.wikipedia.org/wiki/En
 
 I chose 6in4, mostly because I felt like it :laughing:. I'm sure Teredo would have brought me on an equally interesting journey, and maybe I'll see what its all about some other day.
 
+Below is a diagram of a typical 6in4 packet:
+
+<img src="/images/posts/bell-ipv6/sit.png" loading="lazy" >
+
 ### Tunnel brokerage
 
 When creating a 6in4 tunnel, you must have a server on the other end of the tunnel with:
@@ -100,5 +104,9 @@ To enable bridge mode on the Home Hub 4000, plug a computer into its ethernet sw
 Assuming you correctly set up PPPoE using the instructions above, your router should disappear from the devices list, and only your computer should remain as a connected device. Check back in the Unifi Controller, and the UDM-PRO will have your real Bell WAN address. This may take up to 5 minutes.
 
 ## Tunnel server setup
+
+At this point, everything on the local network side is ready for a [SIT tunnel](https://developers.redhat.com/blog/2019/05/17/an-introduction-to-linux-virtual-interfaces-tunnels#ipip_tunnel), and we need to set up the server side.
+
+Even though the HH4K is bypassed, Bell will still not allow pings through to the UDM-PRO, so Tunnel Broker will not quite work yet.
 
 ## Router setup
