--- a/content/as204466.md
+++ b/content/as204466.md
@@ -1,5 +1,7 @@
 ---
 title: Evan's Network
+extra:
+    redir_to: https://ewpratten.com/network
 ---
 
-The page you are looking for has moved. Please click [here](https://net.va3zza.com).
+The page you are looking for has moved. Please click [here](https://ewpratten.com/network).
