--- a/content/products/vcvrack/a10u8r.md
+++ b/content/products/vcvrack/a10u8r.md
@@ -2,7 +2,7 @@
 title: "A10U8R: Signal Attenuator"
 description: "A small, but helpful module for VCV Rack 2"
 extra:
-  uses_katex: true
+  uses: [katex]
 ---
 
 [![Download Plugin](https://img.shields.io/badge/-download-darkgreen)](https://github.com/Ewpratten/A10U8R/releases/latest)
