Update timeline to contain more info

--- a/content/blog/2022-12-07-gamels.md
+++ b/content/blog/2022-12-07-gamels.md
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: "I re-implemented `ls` to query the Steam API" 
+title: "I re-implemented ls to query the Steam API" 
 description: "gamels: never be confused about Steam appid direcroties again"
 date: 2022-12-07
 tags: project
 draft: false
 extra:
   auto_center_images: true
-  excerpt: "`gamels` will list all files in a directory in the style of `ls -la`, but will also show the name of any Steam game found in the listing. This utility was made to help me explore the filesystem of the Steam Deck."
+  excerpt: "gamels will list all files in a directory in the style of 'ls -la', but will also show the name of any Steam game found in the listing. This utility was made to help me explore the filesystem of the Steam Deck."
 ---
 
 Today, I released a new command-line tool called [`gamels`](https://github.com/ewpratten/gamels).
