--- a/content/software/2021-01-31-hambands.md
+++ b/content/software/2021-01-31-hambands.md
@@ -1,12 +1,8 @@
 ---
 title: HamBands - Rust Library
-description: A small library for checking which amateur radio band a frequency belongs to
 date: 2021-01-31
 extra:
     icon: las la-toolbox
     excerpt: A small library for checking which amateur radio band a frequency belongs to
+    redir_to: https://github.com/ewpratten/hambands
 ---
-
-- [GitHub](https://github.com/ewpratten/hambands)
-- [Crates.io](https://crates.io/crates/hambands)
-- [Documentation](https://docs.rs/hambands)
