Enable descr quotes

--- a/content/blog/2020-04-20-LudumDare46.md
+++ b/content/blog/2020-04-20-LudumDare46.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title:  "Ludum Dare 46: Jamming with friends"
-description: "Recapping the development of <em>Micromanaged Mike</em>"
+description: "Recapping the development of *Micromanaged Mike*"
 date:   2020-04-20
 tags: gamedev gamejam team ldjam javascript
 redirect_from: 
@@ -10,6 +10,7 @@ redirect_from:
 aliases: [/blog/2020/04/20/ludumdare46]
 extra:
     uses: [twitter]
+    excerpt: A look back at the development of Micromanaged Mike
 ---
 
 Over the past weekend I teamed up with @rsninja722, @wm-c, @exvacuum, @marshmarlow, and our friends Sally and Matt to participate in the [LudumDare46](https://ldjam.com/events/ludum-dare/46) game jam. This post will outline the game development process.
