--- a/content/blog/2023-02-07-ipv6-canvas.md
+++ b/content/blog/2023-02-07-ipv6-canvas.md
@@ -8,6 +8,8 @@ draft: false
 extra:
   auto_center_images: true
   excerpt: "Using some python, I have a reference to this website semi-permanently implanted on the IPv6 Canvas"
+  discuss:
+    reddit: https://www.reddit.com/r/ewpratten/comments/12xzvf9/blatant_selfadvertising_on_the_ipv6_canvas/
 ---
 
 Yesterday, the [IPv6 Canvas](https://blog.tugzrida.xyz/2023/02/06/introducing-the-ipv6-canvas/) was pushed to the public.
