Add social links

--- a/content/blog/2023-07-07-ampr-vpn.md
+++ b/content/blog/2023-07-07-ampr-vpn.md
@@ -8,9 +8,9 @@ draft: false
 extra:
   auto_center_images: true
   excerpt: "A guide on setting up a VPS, announcing a prefix over BGP, and using it as a VPN server"
-  # discuss:
-  #   reddit: https://www.reddit.com/r/ewpratten/comments/1356u1t/i_performed_a_button_swap_on_my_mouse/
-  #   hacker_news: https://news.ycombinator.com/item?id=35781662
+  discuss:
+    reddit: https://www.reddit.com/r/ewpratten/comments/14tdltu/building_a_vpn_with_an_amprnet_bgp_allocation/
+    hacker_news: https://news.ycombinator.com/item?id=36635146
   uses: [mermaid]
 ---
 
