consolidate project tags

--- a/content/blog/2019-06-27-PWNlink.md
+++ b/content/blog/2019-06-27-PWNlink.md
@@ -3,7 +3,7 @@ layout: page
 title:  "I had some fun with a router"
 description: "cleartext passwords + external management = death wish"
 date:   2019-06-27
-tags: projects
+tags: project
 aliases: [/blog/2019/06/27/pwnlink]
 ---
 
