--- a/content/blog/2019-07-01-devDNS.md
+++ b/content/blog/2019-07-01-devDNS.md
@@ -3,7 +3,7 @@ layout: page
 title:  "devDNS"
 description: "The DNS over devRant service"
 date:   2019-07-01
-tags: projects
+tags: project
 aliases: [/blog/2019/07/01/devdns]
 ---
 
