--- a/content/blog/2019-07-15-MindMap.md
+++ b/content/blog/2019-07-15-MindMap.md
@@ -3,7 +3,7 @@ layout: page
 title:  "Mind map generation with Python"
 description: "Step 1"
 date:   2019-07-15
-tags: projects frc
+tags: project frc
 alises: [https://retrylife.ca/blog/2019/07/15/mindmap]
 ---
 
