--- a/content/blog/2019-08-24-Shift2.md
+++ b/content/blog/2019-08-24-Shift2.md
@@ -3,7 +3,7 @@ layout: page
 title:  "Keyed data encoding with Python"
 description: "XOR is pretty cool"
 date:   2019-08-24
-tags: projects
+tags: project
 aliases: [/blog/2019/08/24/shift2]
 ---
 
