--- a/content/blog/2022-04-06-udm-fan.md
+++ b/content/blog/2022-04-06-udm-fan.md
@@ -1,12 +1,13 @@
 ---
 layout: page
-title: "Making my UDM-Pro scream" 
-description: "Remote fan control for the Unifi Dream Machine Pro"
+title: Making my UDM-Pro scream
+description: Remote fan control for the Unifi Dream Machine Pro
 date: 2022-04-06
-tags: random
+tags:
+  - random
+  - hardware
 draft: false
 extra:
-  
   excerpt: A project review post covering my work on remote-control for the UDM-Pro cooling system
 ---
 
