--- a/content/blog/2022-05-21-nanovna.md
+++ b/content/blog/2022-05-21-nanovna.md
@@ -1,12 +1,15 @@
 ---
 layout: page
-title: "Field Log: First look at the NanoVNA" 
-description: "Weekends are prime radio time"
+title: "Field Log: First look at the NanoVNA"
+description: Weekends are prime radio time
 date: 2022-05-21
-tags: radio random nanovna
+tags:
+  - radio
+  - random
+  - nanovna
+  - product
 draft: false
 extra:
-  
   auto_center_images: true
   excerpt: I went out in the field and tried out my brand new NanoVNA.
 ---
