--- a/content/blog/2022-06-13-fedora-36-vp.md
+++ b/content/blog/2022-06-13-fedora-36-vp.md
@@ -1,12 +1,14 @@
 ---
 layout: page
-title: "Getting Visual Paradigm to launch on Fedora 36" 
-description: "Bundle your libraries correctly, kids"
+title: Getting Visual Paradigm to launch on Fedora 36
+description: Bundle your libraries correctly, kids
 date: 2022-06-13
-tags: random
+tags:
+  - random
+  - tutorial
+  - reference
 draft: false
 extra:
-  
   auto_center_images: true
   excerpt: A quick guide on launching Visual Paradigm on Fedora 36
 ---
