--- a/content/blog/2022-08-17-as398057.md
+++ b/content/blog/2022-08-17-as398057.md
@@ -1,12 +1,13 @@
 ---
 layout: page
-title: "I am my own ISP" 
-description: "The next stage in my hobby network"
+title: I am my own ISP
+description: The next stage in my hobby network
 date: 2022-08-17
-tags: networking
+tags:
+  - networking
+  - bgp
 draft: true
 extra:
-  
   auto_center_images: true
   excerpt: I recently started AS398057, a low cost Autonomous System. This post talks about how its going
 ---
