--- a/content/blog/2020-06-05-32u4-upload.md
+++ b/content/blog/2020-06-05-32u4-upload.md
@@ -1,15 +1,18 @@
 ---
 layout: page
-title:  "Flashing code to a 32u4 chip"
-description: "Notes for my future self"
-date:   2020-06-05
-tags: avr 32u4 lowlevel
-redirect_from: 
- - /post/65f9kjl4/
- - /65f9kjl4/
-aliases: [/blog/2020/06/05/32u4-upload]
+title: Flashing code to a 32u4 chip
+description: Notes for my future self
+date: 2020-06-05
+tags:
+  - avr
+  - walkthrough
+redirect_from:
+  - /post/65f9kjl4/
+  - /65f9kjl4/
+aliases:
+  - /blog/2020/06/05/32u4-upload
 extra:
-    excerpt: A reference post that explains how to flash new software to an atmega32u4 chip
+  excerpt: A reference post that explains how to flash new software to an atmega32u4 chip
 ---
 
 The [ATmega32u4](http://ww1.microchip.com/downloads/en/devicedoc/atmel-7766-8-bit-avr-atmega16u4-32u4_datasheet.pdf) (aka. 32u4) chip is one of my favorite microcontrollers to work with. It is a low power, 8-bit, [AVR](https://en.wikipedia.org/wiki/AVR_microcontrollers)-based system developed by [Atmel](https://en.wikipedia.org/wiki/Atmel). They are commonly used in [Arduino Leonardo](https://www.arduino.cc/en/Main/Arduino_BoardLeonardo) development boards and programmed via the [Arduino IDE](https://www.arduino.cc/en/Main/Software), but I prefer having as much control over the device as I can. So I choose to program these chips directly in [AVRASM](http://ww1.microchip.com/downloads/en/devicedoc/40001917a.pdf) and [AVR-C](https://www.nongnu.org/avr-libc/user-manual/).
