--- a/content/blog/2023-07-07-ampr-vpn.md
+++ b/content/blog/2023-07-07-ampr-vpn.md
@@ -1,17 +1,21 @@
 ---
 layout: page
-title: "Building a VPN with an AMPRNet BGP allocation" 
-description: "A quick guide on using your shiny new AMPRNet allocation"
+title: Building a VPN with an AMPRNet BGP allocation
+description: A quick guide on using your shiny new AMPRNet allocation
 date: 2023-07-07
-tags: networking
+tags:
+  - networking
+  - amprnet
+  - bgp
 draft: false
 extra:
   auto_center_images: true
-  excerpt: "A guide on setting up a VPS, announcing a prefix over BGP, and using it as a VPN server"
+  excerpt: A guide on setting up a VPS, announcing a prefix over BGP, and using it as a VPN server
   discuss:
     reddit: https://www.reddit.com/r/ewpratten/comments/14tdltu/building_a_vpn_with_an_amprnet_bgp_allocation/
     hacker_news: https://news.ycombinator.com/item?id=36635146
-  uses: [mermaid]
+  uses:
+    - mermaid
 ---
 
 One of the most common emails I receive from readers of this website generally starts with:
