more tag cleanup

--- a/content/blog/2023-02-07-ipv6-canvas.md
+++ b/content/blog/2023-02-07-ipv6-canvas.md
@@ -1,13 +1,14 @@
 ---
 layout: page
-title: "Blatant self-advertising on the IPv6 Canvas" 
-description: "An ungodly amount of pings for a small bitmap"
+title: Blatant self-advertising on the IPv6 Canvas
+description: An ungodly amount of pings for a small bitmap
 date: 2023-02-07
-tags: project
+tags:
+  - random
 draft: false
 extra:
   auto_center_images: true
-  excerpt: "Using some python, I have a reference to this website semi-permanently implanted on the IPv6 Canvas"
+  excerpt: Using some python, I have a reference to this website semi-permanently implanted on the IPv6 Canvas
   discuss:
     reddit: https://www.reddit.com/r/ewpratten/comments/12xzvf9/blatant_selfadvertising_on_the_ipv6_canvas/
 ---
