working on tag cleanup

--- a/content/blog/2019-07-15-MindMap.md
+++ b/content/blog/2019-07-15-MindMap.md
@@ -6,8 +6,8 @@ date: 2019-07-15
 tags:
   - project
   - python
-alises:
-  - https://retrylife.ca/blog/2019/07/15/mindmap
+aliases:
+  - /blog/2019/07/15/mindmap
 ---
 
 While working on an assignment with [Coggle](https://coggle.it) today, I noticed an interesting option in the save menu. *Download as .mm file*. Having rarely worked with mind maps before, and only doing it online, it never occured to me that someone would have a file format for it. So I took a look.
